--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
+    "paths": {
+      "phone-input-lib": [
+        "./dist/phone-input-lib"
+      ]
+    },
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
