feat: rename packages to include scope and add ngPackage entry file

--- a/projects/phone-input-lib/package.json
+++ b/projects/phone-input-lib/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "phone-input-lib",
+  "name": "@eliandsantos/phone-input-lib",
   "version": "0.0.1",
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public-api.ts"
+    }
+  },
   "peerDependencies": {
     "@angular/common": "^18.2.0",
     "@angular/core": "^18.2.0"
