--- a/projects/phone-input-lib/package.json
+++ b/projects/phone-input-lib/package.json
@@ -1,6 +1,22 @@
 {
   "name": "@eliandsantos/phone-input-lib",
   "version": "0.0.1",
+  "license":"MIT",
+  "description": "An Angular library for international phone number input with validation and formatting.",
+  "author": "Eliand Santos",
+  "keywords": [
+    "angular",
+    "phone-input",
+    "international-phone",
+    "angular-library",
+    "form-control",
+    "angular-material",
+    "typescript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EliandDeveloper/phone-input-library.git"
+  },
   "ngPackage": {
     "lib": {
       "entryFile": "src/public-api.ts"
