--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phone-input-lib-workspace",
-  "version": "0.0.2",
+  "name": "phone-input-lib",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,8 +17,11 @@
     "form-control",
     "angular-material",
     "typescript"
-]
-,
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EliandDeveloper/phone-input-library.git"
+  },
   "dependencies": {
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
