feat: update package name to @eliandsantos/phone-input-lib and bump version to 0.0.3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phone-input-lib",
-  "version": "0.0.1",
+  "name": "@eliandsantos/phone-input-lib",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
